# chainflip-eth-contracts

./: .dockerignore  .drone.yml  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  .solhint.json  Dockerfile  Dockerfile.eth-brownie  Findings.txt  KeyManager_flat.sol  KeyManager_flat_clean.sol  LICENSE.md  Makefile  README.md  SECURITY.md  TokenVesting_backup.sol  brownie-config.yaml  docker-compose.yml  echidna.config.yml  hardhat-interval-mining.config.js  hardhat-localnet.config.js  hardhat.config.js  network-config.yaml  package-lock.json  package.json  pyproject.toml  reference.sol  run-echidna-flat.sh  slither.db.json  snapshotOldFlip.csv  tronbox.js
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: 1-node.env  3-node.env  actionlint.yaml
arb-utils/: arb_init.ts  package.json  pnpm-lock.yaml
ci/: .drone.yml
contracts/: AccessValidator.sol  AddressHolder.sol  AggKeyNonceConsumer.sol  CFReceiver.sol  CommunityGuarded.sol  CommunityOverriden.sol  DeployContract.sol  DeployerContract.sol  Deposit.sol  DepositEth.sol  DepositNative.sol  DepositToken.sol  ERC20.sol  ERC777.sol  FLIP.sol  GovernanceCommunityGuarded.sol  KeyManager.sol  Migrations.sol  Multicall.sol  ReferenceScGateway.sol  SCGatewayReference.sol  ScUtils.sol  SchnorrSECP256K1.sol  Shared.sol  SquidMulticall.sol  StakeManager.sol  StateChainGateway.sol  TestEchidna.sol  TokenVesting.sol  TokenVestingNoStaking.sol  TokenVestingStaking.sol  Validator.sol  Vault.sol
docgen/: contract.hbs  contract.hbs.old
docs/: AddressHolder.md  (+12 more)
(+505 files in other folders)
