[tool.poetry]
name = "eth-contracts"
version = "0.1.0"
description = ""
authors = ["James Key <james@chainflip.io>", "Tom Nash <tom@chainflip.io>"]

[tool.poetry.dependencies]
python = "^3.6.1"
eth-brownie = "^1.12.4"
umbral = "^0.1.3-alpha.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
